Inline editing on photo grid. Add x-editable library to fabrizio1.0 theme Modified setLocation function to ensure $tip is visible within the window

--- a/src/html/assets/themes/fabrizio1.0/stylesheets/less/buttons.less
+++ b/src/html/assets/themes/fabrizio1.0/stylesheets/less/buttons.less
@@ -34,6 +34,14 @@
     background-color: @color_theme !important;
   }
   
+  .btn-primary, .editable-submit {
+    background-color: green !important;
+  }
+  
+  .btn.editable-cancel {
+    background-color: #dedede !important;
+  }
+  
   .btn-theme-secondary {
     background-color: @color_theme_secondary !important;
     color: @color_light_gray;
