--- a/src/html/assets/themes/fabrizio1.0/stylesheets/less/typography.less
+++ b/src/html/assets/themes/fabrizio1.0/stylesheets/less/typography.less
@@ -20,3 +20,10 @@ h1,h2,h3,h4,h5,h6{
   background-color: #dc3308;
   box-shadow: 1px 1px 1px #fff;
 }
+
+.editable-click, 
+a.editable-click, 
+a.editable-click:hover {
+  text-decoration: none;
+  border-bottom-width: 0;
+}
